@startuml

title Diagrama de Classes – TA/Monitoria (somente classes e relacionamentos)

url: https://www.plantuml.com/plantuml/png/VLNDRjim3BxxAOJiqcv8jrs37UhQBXgWJG8dwRLWRDOLO4kf9EUmhi3UOM-u9nab_ycPjvFbZzH7yYDfNsi3ojHL6GI6cn9PpA5GK07BaKKbQ8sQ_VxvY-t2pmzIS2CL1tQXPON28CjQ3sGAIyYu560DKby6WREn3MejWRq5Z7rWF5-m_NuPknT170ksDOgBmW5O0Iz7I0LqpkeIEfIzrOA_rlXEvayK4qh-7TIzBBYuk7GOcBe1DwYUUKdeUvTAMDP2kapcBAkLbbwiEJkYuZ8dZ0lJk2WA6ylwKEB0iL7osLQaMfuSZwHVK_I8JdCuujzfzqIHb2f70NbF1LHEYleeXOOJ3aBqLsAkCtuikO2k29dpGavfCn-hsrCyGj5TzdenPzJxkXmNaAFEI7mOemfVQwvf3FG85dLbgVMWNWu6mWFIR3aPmM0F9o93fJhDUXDDegaThNrQEjVG8pM0qb1jVx6vhFp6HY1oJimKQgeu6zDpQKBkU3KLrlDhPJHmIugN_IZO97HzgD1WbnESQEJ6AOM6duWdns5f_f5PYWNNHlbAl4W5Ecs6En-9EjcJSGKfBQ8DA5kvJhpN3evAdheyaNhcQUtIIyDjj5_ThUcuILPnijebJ-4cNJ-6KMZ1y2P9To4TRfFeBepjALgledkg9ppZFE_9Td_paEoMxaxoy1G-XlVBZjL5S9Oq6SvnibrkTpQ7C-g-GaVS9JeGhJsYjRtRVeE-_PZFcu_02EbNUeHw-qa4_TRFliuOMMTVhgu-pffrMdGZ6hZNpeCUti8kxFV5sE5b4FYxFqdu8YjPokACiN7nXLtGFcPumA3vjFtVqOrJuAEUFvqcHfQoblGVA90MBfYmjv7QSWULRBWJrrGW4P1-roXo-iVy0G==

class Pessoa {
  # id: UUID
  # nome: String
  # email: String
  # matricula: String {unique}
  + realizarLogin()
  + atualizarPerfil()
}

class Aluno {
  - curso: String
  - periodo: int
  - cra: Double
}

class Professor {
  - departamento: String
  - siape: String {unique}
}

class Coordenador {
  - areaResponsavel: String
}

class Disciplina {
  - codigo: String {unique}
  - nome: String
}

class Vaga {
  - id: UUID
  - titulo: String
  - descricao: String
  - requisitos: String
  - numVagas: int
  - dataAbertura: Date
  - dataEncerramento: Date
  - status: StatusVaga
  + publicar()
  + encerrar()
}

class Candidatura {
  - id: UUID
  - dataCandidatura: DateTime
  - status: StatusCandidatura
  - notaFinal: Double
  + submeter()
  + avaliar()
}

class AtividadeMonitoria {
  - id: UUID
  - dataRegistro: Date
  - horasRealizadas: int
  - descricao: String
  - status: StatusRelatorio
  + enviar()
  + aprovar()
}

enum StatusVaga {
  RASCUNHO
  PENDENTE_APROVACAO
  ABERTA
  FECHADA
  CONCLUIDA
}

enum StatusCandidatura {
  SUBMETIDA
  EM_AVALIACAO
  APROVADA
  REPROVADA
  DESISTENTE
}

enum StatusRelatorio {
  PENDENTE
  APROVADO
  REPROVADO
}

Pessoa <|-- Aluno
Pessoa <|-- Professor
Pessoa <|-- Coordenador

Professor "1" -- "0..*" Vaga : publica
Vaga "1" -- "1" Disciplina : pertence a
Coordenador "1" -- "0..*" Vaga : homologa
Vaga "1" -- "0..*" Candidatura : recebe
Aluno "1" -- "0..*" Candidatura : realiza
Candidatura "1" -- "0..1" AtividadeMonitoria : pode gerar
AtividadeMonitoria "0..*" -- "1" Professor : revisado por

@enduml
